# FishyTime

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
src/fishytime/: cli.py  config.py  models.py  pipeline.py  scoring.py  timezones.py
src/fishytime/data_sources/: moon.py  snowpack.py  stocking.py  usgs.py  weather.py
tests/: test_moon.py  test_pipeline.py  test_scoring.py  test_usgs.py  test_weather.py  util.py
tests/fixtures/: nws_forecast.json  nws_gridpoint_raw.json  nws_observations_falling_pressure.json  nws_observations_null_pressure.json  nws_points.json  nws_stations.json  usgs_continuous_history.json  usgs_empty.json  usgs_latest_continuous.json  usgs_latest_daily.json
